--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta
       name="description"
-      content="Baxico API Visualizer created using React.js and deployed on the EDGE with Cloudflare Pages."
+      content="Banxico API Visualizer created using React.js and deployed on the EDGE with Cloudflare Pages."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
